--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ with(menuStyleL=new mm_style()){
 		overflow="scroll";
 		position="fixed";
 				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Booking Enquiry &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://bluemaxholidays.com/index.php?app=tour&tpl=view&task=booking&mid=8;target=_self");
-				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact Us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://bluemaxholidays.com/index.php?app=content&tpl=view&task=contact&mid=8;target=_self");
+				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact Us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://bluemaxholidays.com/contact-u.html");
 				}
 
 		with(link=new menuname("A6"))
