--- a/index.html
+++ b/index.html
@@ -135,24 +135,6 @@ with(menuStyleL=new mm_style()){
 				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Booking Enquiry &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://bluemaxholidays.com/index.php?app=tour&tpl=view&task=booking&mid=8;target=_self");
 				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact Us &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://bluemaxholidays.com/contact-u.html");
 				}
-
-		with(link=new menuname("A6"))
-		{
-		style=menuStyleL;
-		overflow="scroll";
-		position="fixed";
-				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Customized Tours &nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://visitkerala.in/customized_tours;target=_self");
-				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Rent-a-Car &nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://visitkerala.in/Rent-a-Car;target=_self");
-				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Travel Tips &nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://visitkerala.in/travel_tips;target=_self");
-				}
-		with(link=new menuname("A7"))
-		{
-		style=menuStyleL;
-		overflow="scroll";
-		position="fixed";
-				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Booking Enquiry &nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://visitkerala.in/booking;target=_self");
-				aI("text=&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Contact Us &nbsp;&nbsp;&nbsp;&nbsp;</font>;url=https://visitkerala.in/contacts;target=_self");
-				}
 drawMenus();
 </script><!--Nvigation End-->
 
@@ -182,11 +164,11 @@ drawMenus();
                 	<li><a href="https://bluemaxholidays.com/index.html" class="active">Home</a></li>
                     <li><a href="https://bluemaxholidays.com/about.html" class="">About&nbsp;Us </a></li>
                     <li><a href="#" id='A3' onMouseOver='popup("A3","A3");' onMouseOut='popdown()' class="">Destinations</a></li>
-                    <li><a href="https://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=4" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
-                    <li><a href="https://bluemaxholidays.com/index.php?app=tour&tpl=view&task=showAll&mid=5" class="">Tour&nbsp;Packages</a></li>
-                    <li><a href="https://bluemaxholidays.com/index.php?app=hotel&tpl=view&task=showAll&mid=6" class="">Accomodation</a></li>
-                    <li><a href="https://bluemaxholidays.com/index.php?app=content&tpl=view&task=details&mid=7" class="">Travel&nbsp;Desk</a></li>
-                    <li><a href="https://bluemaxholidays.com/index.php?app=content&tpl=view&task=contact&mid=8" class="">Contact&nbsp;Us </a></li>
+                    <li><a href="https://bluemaxholidays.com/art-and-culture.html" class="">Art&nbsp;&amp;&nbsp;Culture</a></li>
+                    <li><a href="https://bluemaxholidays.com/tour-packages.html" class="">Tour&nbsp;Packages</a></li>
+                    <li><a href="https://bluemaxholidays.com/accomodation.html" class="">Accomodation</a></li>
+                    <li><a href="https://bluemaxholidays.com/travel-desk.html" class="">Travel&nbsp;Desk</a></li>
+                    <li><a href="https://bluemaxholidays.com/contact-us.html" class="">Contact&nbsp;Us </a></li>
                 </ul>
             <div class="clear"></div>
             </div>
