--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ drawMenus();
 	<div id="WrapperMain">
     	<div id="Wrapper">
            			<div id="Header_area">
-            	<div id="LogoLeft"><a href="index.php"><img src="images/logo.jpg" alt="" border="0" width="120"/></a></div>
+            	<div id="LogoLeft"><a href="index.html"><img src="images/logo.jpg" alt="" border="0" width="120"/></a></div>
                 <div id="LogoRight"><img src="https://bluemaxholidays.com/uploaded_files/banner/image_1.png" width="148" height="111" title="" alt="top" border="0"></div>
             </div>
 
