--- a/travel-desk.html
+++ b/travel-desk.html
@@ -1,4 +1,4 @@
- 
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -161,7 +161,7 @@ drawMenus();
 <div id="WrapperMain">
   <div id="Wrapper">
     			<div id="Header_area">
-            	<div id="LogoLeft"><a href="index.php"><img src="images/logo.jpg" alt="" border="0" width="120"/></a></div>
+            	<div id="LogoLeft"><a href="index.html"><img src="images/logo.jpg" alt="" border="0" width="120"/></a></div>
                 <div id="LogoRight"><img src="http://bluemaxholidays.com/uploaded_files/banner/image_1.png" width="148" height="111" title="" alt="top" border="0"></div>
             </div>
 
