--- a/video-gallery.html
+++ b/video-gallery.html
@@ -160,7 +160,7 @@ drawMenus();
 <div id="WrapperMain">
   <div id="Wrapper">
     			<div id="Header_area">
-            	<div id="LogoLeft"><a href="index.php"><img src="images/logo.jpg" alt="" border="0" width="120"/></a></div>
+            	<div id="LogoLeft"><a href="index.html"><img src="images/logo.jpg" alt="" border="0" width="120"/></a></div>
                 <div id="LogoRight"><img src="http://bluemaxholidays.com/uploaded_files/banner/image_1.png" width="148" height="111" title="" alt="top" border="0"></div>
             </div>
 
